tests/errors/try-undetermined/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0122]: `try`'s right-hand side has an undetermined type.
  │
  ├─𜱶 help: annotate the source so the carrier (option / result / task) can be selected.
  │
6 │  try y = f x
  │  ^^^^^^^^^^^
  ╰─𜱶 tests/errors/try-undetermined/main.pa:6:2
